# hackerrank

./: CMakeLists.txt  readme.md
Source/: main.cpp
Source/ProblemsManager/: Problem.h  ProblemsManager.cpp  ProblemsManager.h
